# DimensionaLBM

./: .gitignore  .ruff.toml  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
dimensional_lbm/: __init__.py  __main__.py  _typing.py  adr_lbm.py  bgk_lbm.py  conversion_mode.py  lbm.py  main.py  simulator.py  trt_lbm.py  unit_system_if.py  zou_he.py
dimensional_lbm/boundaries/: __init__.py  boundary.py  callbacks.py  test_wall_detector.py  wall_detector.py  zero_gradient.py  zou_he.py
dimensional_lbm/lattices/: __init__.py  d2q5.py  d2q9.py  ddqq_lattice.py
scenarios/: __init__.py  couette.py  dhw24.py  dhw25.py  ldc.py  ldc_configurable.py  poiseuille.py  scenario.py  schaefer_turek.py  turek.py
unit_sytem/: __init__.py  unit_system.py
