[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "DimensionaLBM"
version = "0.1.0"
description = "A fully dimensional LBM Implementation for Prototyping"
readme = "README.md"
requires-python = ">=3.14.4"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pint>=0.25.2",
    "pyyaml>=6.0",
    "pre-commit>=4.5.1",
    "pyright>=1.1.407",
    "ruff>=0.14.9",
    "pintrs>=0.4.6",
]
license = "MIT"

[tool.setuptools.packages.find]
include = ["dimensional_lbm*", "scenarios*"]
